# crymes

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  justfile  pyproject.toml
conjurl/: README.md  pyproject.toml
conjurl/src/conjurl/: __init__.py
conjurl/tests/: conftest.py  test_import_level.py  test_import_module.py  test_ops.py
