[project]
name = "conjurl"
version = "0.1.0.dev0"
description = "Conjurl is a Python crime which is meant to allow importing from various URLs (and URIs)."
readme = "README.md"
license = { file = "../LICENSE" }
authors = [
    { name = "Joshua Cannon", email = "thejcannon@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
